DEF0500478: PRB1745071: MDEV-33770 - Alter operation hangs when encryption thread works on the same tablespace

- Background encryption threads wait for stop flag
to exit early from the tablespace. Alter operation
fails to set the stop flag before waiting for the
encryption thread to stop using the tablespace.