storage/innobase/fil/fil0crypt.cc
@@ -2748,7 +2748,7 @@ fil_space_crypt_close_tablespace(
 				   << " seconds to drop space: "
 				   << space->name << " ("
 				   << space->id << ") active threads "
-				   << cnt << "flushing="
+				   << cnt << " flushing="
 				   << flushing << ".";
 			last = now;
 		}
